// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create group 1`] = `
Object {
  "access_token": "[token]",
  "access_token_expires_at": "[DATE]",
  "id": "[ID]",
  "user_id": "[ID]",
}
`;

exports[`create group 2`] = `
Array [
  Object {
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "id": "[ID]",
    "member_ids": "[UUIDs-2]",
    "name": "heaven is here",
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
  },
]
`;

exports[`create group 3`] = `
Array [
  Object {
    "content": "hello world",
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "group_id": "[ID]",
    "id": "[ID]",
    "sender_id": "[ID]",
    "type": "text",
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
    "upload": null,
  },
  Object {
    "content": "oh hi",
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "group_id": "[ID]",
    "id": "[ID]",
    "sender_id": "[ID]",
    "type": "text",
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
    "upload": null,
  },
]
`;

exports[`create group 4`] = `
Array [
  Object {
    "content": "hello world",
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "group_id": "[ID]",
    "id": "[ID]",
    "sender_id": "[ID]",
    "type": "text",
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
    "upload": null,
  },
  Object {
    "content": "oh hi",
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "group_id": "[ID]",
    "id": "[ID]",
    "sender_id": "[ID]",
    "type": "text",
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
    "upload": null,
  },
]
`;

exports[`create group 5`] = `Array []`;

exports[`create group 6`] = `
Array [
  Object {
    "content": "hello world",
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "group_id": "[ID]",
    "id": "[ID]",
    "sender_id": "[ID]",
    "type": "text",
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
    "upload": null,
  },
  Object {
    "content": "oh hi",
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "group_id": "[ID]",
    "id": "[ID]",
    "sender_id": "[ID]",
    "type": "text",
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
    "upload": null,
  },
]
`;
